[options.extras_require]
all =
    %(amici)s
    %(examples)s
    %(tests)s
doc =
    sphinx<8
    docutils<0.19
    sphinx_rtd_theme
    sphinx-autodoc-typehints
    mock
    %(amici)s
amici =
    amici
    petab
examples =
    notebook
    scipy
tests =
    pytest
    scipy
    sympy
    more-itertools
