[options.extras_require]
all =
    %(amici)s
    %(examples)s
    %(tests)s
doc =
    docutils<0.19
    ipython
    mock
    nbconvert
    nbsphinx
    recommonmark>=0.7.1
    sphinx<8
    sphinx_rtd_theme
    sphinx-autodoc-typehints
    %(amici)s
amici =
    amici
    petab
examples =
    notebook
    scipy
tests =
    pytest
    scipy
    sympy
    more-itertools
